modules for days
add a whole bunch of modules, added intake choke factor, reworked data inputting

--- a/GameData/AdvancedAtmosphereToolsRedux/Localization/en-us.cfg
+++ b/GameData/AdvancedAtmosphereToolsRedux/Localization/en-us.cfg
@@ -70,5 +70,11 @@ Localization
         #LOC_AATR_WindSpeedTip = The wind speed applied to the craft will be multiplied by this value.
         #LOC_AATR_WindSpeedVariability = Wind Speed Variability (%)
         #LOC_AATR_WindVariabilityTip = How much wind speeds may deviate from their inputted values.
+
+        #LOC_AATR_IntakeSlightlyChoked = Slightly choked
+        #LOC_AATR_IntakeModeratelyChoked = Moderately choked
+        #LOC_AATR_IntakeHeavilyChoked = Heavily choked
+        #LOC_AATR_IntakeSeverelyChoked = Severely choked
+        #LOC_AATR_IntakeCompletelyChoked = Completely choked
     }
 }
