--- a/AdvancedAtmosphereToolsRedux/AdvancedAtmosphereToolsRedux.csproj
+++ b/AdvancedAtmosphereToolsRedux/AdvancedAtmosphereToolsRedux.csproj
@@ -33,19 +33,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\000_Harmony\0Harmony.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\000_Harmony\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\Kopernicus\Plugins\Kopernicus.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\Kopernicus\Plugins\Kopernicus.dll</HintPath>
     </Reference>
     <Reference Include="Kopernicus.Parser">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\Kopernicus\Plugins\Kopernicus.Parser.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\Kopernicus\Plugins\Kopernicus.Parser.dll</HintPath>
     </Reference>
     <Reference Include="ModularFlightIntegrator">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\ModularFlightIntegrator\ModularFlightIntegrator.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\ModularFlightIntegrator\ModularFlightIntegrator.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,38 +56,38 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="ToolbarControl">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\001_ToolbarControl\Plugins\ToolbarControl.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\GameData\001_ToolbarControl\Plugins\ToolbarControl.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.InputModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.InputModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.InputModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="System">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\System.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\System.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\mscorlib.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program\KSP_x64_Data\Managed\mscorlib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -100,23 +100,36 @@
     <Compile Include="BaseModules\BinaryTemperatureData\BinaryTemperatureData.cs" />
     <Compile Include="BaseModules\BinaryTemperatureData\BinaryTemperatureDataLoader.cs" />
     <Compile Include="BaseModules\BinaryWindData\BinaryWindData.cs" />
-    <Compile Include="AtmosphereData.cs" />
+    <Compile Include="AtmoToolsRedux_Data.cs" />
     <Compile Include="BaseModules\BinaryWindData\BinaryWindDataLoader.cs" />
+    <Compile Include="BaseModules\FlatTemperatureModifierMap\FlatTemperatureModifierMap.cs" />
+    <Compile Include="BaseModules\FlatTemperatureModifierMap\FlatTemperatureModifierMapLoader.cs" />
     <Compile Include="BaseModules\FlowMap\FlowMap.cs" />
     <Compile Include="BaseModules\FlowMap\FlowMapLoader.cs" />
+    <Compile Include="BaseModules\FractionalPressureModifierMap\FractionalPressureModifierMap.cs" />
+    <Compile Include="BaseModules\FractionalPressureModifierMap\FractionalPressureModifierMapLoader.cs" />
     <Compile Include="BaseModules\GenericUnsafeAtmosphere\GenericUnsafeAtmosphere.cs" />
     <Compile Include="BaseModules\GenericUnsafeAtmosphere\GenericUnsafeAtmosphereLoader.cs" />
     <Compile Include="BaseModules\GenericWindObject\GenericWindObject.cs" />
     <Compile Include="BaseModules\GenericWindObject\GenericWindObjectLoader.cs" />
+    <Compile Include="BaseModules\LatitudeSunMultModifierMap\LatitudeSunMultModifierMap.cs" />
+    <Compile Include="BaseModules\LatitudeSunMultModifierMap\LatitudeSunMultModifierMapLoader.cs" />
     <Compile Include="BaseModules\MolarMassCurve\MolarMassCurve.cs" />
     <Compile Include="BaseModules\MolarMassCurve\MolarMassCurveLoader.cs" />
+    <Compile Include="BaseModules\MultiStarTemperatureController\MultiStarTemperatureController.cs" />
+    <Compile Include="BaseModules\MultiStarTemperatureController\MultiStarTemperatureControllerLoader.cs" />
     <Compile Include="BaseModules\OtherPropertiesLoader.cs" />
+    <Compile Include="BaseModules\SubstellarPressureGradient\SubstellarPressureGradient.cs" />
+    <Compile Include="BaseModules\SubstellarPressureGradient\SubStellarPressureGradientLoader.cs" />
+    <Compile Include="BaseModules\TidallyLockedPreset\TidallyLockedPreset.cs" />
+    <Compile Include="BaseModules\TidallyLockedPreset\TidallyLockedPresetLoader.cs" />
     <Compile Include="BaseModules\TwinStarTemperatureController\TwinStarTemperatureController.cs" />
     <Compile Include="BaseModules\TwinStarTemperatureController\TwinStarTemperatureControllerLoader.cs" />
     <Compile Include="CustomSettings.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="FlightDynamicsOverrides.cs" />
     <Compile Include="FlightSceneHandler.cs" />
+    <Compile Include="GenericClasses\GenericMap.cs" />
     <Compile Include="HarmonyPatches\AirIntakeHijacker.cs" />
     <Compile Include="HarmonyPatches\MaxTempAngleOffsetInjector.cs" />
     <Compile Include="HarmonyPatches\UnsafeAtmosphere.cs" />
@@ -124,7 +137,7 @@
     <Compile Include="Interfaces\Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolbarRegister.cs" />
-    <Compile Include="UnityGUI.cs" />
+    <Compile Include="GUIHandler.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="AtmoToolsRedux_VesselHandler.cs" />
     <Compile Include="HarmonyPatches\WaterPhysics.cs" />
